src/objects/Costing__c/Costing__c.object-meta.xml
<CustomObject>
    <label>Costing</label>
    <nameField>
        <label>Costing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Costing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>