src/objects/Costing__c/fields/BU_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>BU_Approval_Status__c</fullName>
    <label>BU Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>