src/objects/Costing__c/fields/Business_Unit2__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit2__c</fullName>
    <formula>Opportunity__r.Business_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>