src/objects/Costing__c/fields/Cost_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Cost_Completion_Date__c</fullName>
    <inlineHelpText>Requested cost completion date</inlineHelpText>
    <label>Cost Completion Date</label>
    <type>Date</type>
</CustomField>