src/objects/Costing__c/fields/Costing_Number__c.field-meta.xml
<CustomField>
    <fullName>Costing_Number__c</fullName>
    <label>Costing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>