src/objects/Costing__c/fields/Costing_Request__c.field-meta.xml
<CustomField>
    <fullName>Costing_Request__c</fullName>
    <label>Costing Request</label>
    <length>255</length>
    <type>Text</type>
</CustomField>