src/objects/Costing__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>