src/objects/Costing__c/fields/Flag_for_NPI_Filter_Opp_review__c.field-meta.xml
<CustomField>
    <fullName>Flag_for_NPI_Filter_Opp_review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag for NPI Filter/Opp review</label>
    <type>Checkbox</type>
</CustomField>