src/objects/Costing__c/fields/Internal_Cost_Project_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_Cost_Project_No__c</fullName>
    <displayFormat>ICP-{0000}</displayFormat>
    <label>Internal Cost Project No.</label>
    <type>AutoNumber</type>
</CustomField>