src/objects/Costing__c/fields/Marekting_Status__c.field-meta.xml
<CustomField>
    <fullName>Marekting_Status__c</fullName>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Complete - Notify Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>