src/objects/Costing__c/fields/Market_AGC__c.field-meta.xml
<CustomField>
    <fullName>Market_AGC__c</fullName>
    <formula>Opportunity__r.Market_TEXT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market (AGC)</label>
    <type>Text</type>
</CustomField>