src/objects/Costing__c/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is a new product check the box</inlineHelpText>
    <label>New Product?</label>
    <type>Checkbox</type>
</CustomField>