src/objects/Costing__c/fields/No_of_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>No_of_Line_Items__c</fullName>
    <label>No. of Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>