src/objects/Costing__c/fields/No_Shipments_in_Two_Years__c.field-meta.xml
<CustomField>
    <fullName>No_Shipments_in_Two_Years__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this product has not had shipments in two years check this box.</inlineHelpText>
    <label>No Shipments in Two Years</label>
    <type>Checkbox</type>
</CustomField>