src/objects/Costing__c/fields/NPI_Filter_completed__c.field-meta.xml
<CustomField>
    <fullName>NPI_Filter_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NPI Filter completed</label>
    <type>Checkbox</type>
</CustomField>