src/objects/Costing__c/fields/Opp_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Close_Date__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Close Date</label>
    <type>Date</type>
</CustomField>