src/objects/Costing__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <formula>Opportunity__r.Open_Won_or_Lost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Stage</label>
    <type>Text</type>
</CustomField>