src/objects/Costing__c/fields/OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>OpportunityNumber__c</fullName>
    <formula>Opportunity__r.Opportunity_Number__c</formula>
    <label>Opportunity #</label>
    <type>Text</type>
</CustomField>