src/objects/Costing__c/fields/Originated_Date__c.field-meta.xml
<CustomField>
    <fullName>Originated_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Originated Date</label>
    <type>Date</type>
</CustomField>