src/objects/Costing__c/fields/Overall_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Overall_Close_Date__c</fullName>
    <label>Overall Close Date</label>
    <type>DateTime</type>
</CustomField>