src/objects/Costing__c/fields/Prior_Costing_Available__c.field-meta.xml
<CustomField>
    <fullName>Prior_Costing_Available__c</fullName>
    <inlineHelpText>Marketing Manager choose yes if BU does not need to provide costing because prior pricing is available</inlineHelpText>
    <label>Prior Costing Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>