src/objects/Costing__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <description>If there is a requirement, there should be an attachment with specifications for the item(s) selected.</description>
    <inlineHelpText>Select all that apply. If there is a requirement, there should be an attachment with specifications for the item(s) selected.</inlineHelpText>
    <label>Special Requirements</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design/Development/Documentation</fullName>
            </value>
            <value>
                <fullName>Program Management</fullName>
            </value>
            <value>
                <fullName>First Article</fullName>
            </value>
            <value>
                <fullName>Source Inspection</fullName>
            </value>
            <value>
                <fullName>Qual Testing</fullName>
            </value>
            <value>
                <fullName>QNotes (Quality Notes)</fullName>
            </value>
            <value>
                <fullName>Pre-Award Review</fullName>
            </value>
            <value>
                <fullName>Post-Award Review</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>