src/objects/Costing__c/fields/Visual_Status__c.field-meta.xml
<CustomField>
    <fullName>Visual_Status__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &quot;Draft&quot;), IMAGE(&quot;servlet/servlet.FileDownload?file=015M0000000fV9l&quot;, &quot;Yellow Circle&quot;), 
IF(ISPICKVAL(Status__c, &quot;Submit&quot;), 
IMAGE(&quot;servlet/servlet.FileDownload?file=015M0000000lFht&quot;, &quot;Green Circle&quot;),
IMAGE(&quot;servlet/servlet.FileDownload?file=015M0000000fV9l&quot;, &quot;Yellow Circle&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Yellow = Not yet submitted; Green = Submitted.</inlineHelpText>
    <label>Visual Status</label>
    <type>Text</type>
</CustomField>