src/objects/Costing__c/fields/X300K__c.field-meta.xml
<CustomField>
    <fullName>X300K__c</fullName>
    <defaultValue>false</defaultValue>
    <label>300K +</label>
    <type>Checkbox</type>
</CustomField>