src/objects/Costing__c/recordTypes/Corp_II_VI_Costing.recordType-meta.xml
<RecordType>
    <fullName>Corp_II_VI_Costing</fullName>
    <active>true</active>
    <label>Corp II-VI Costing</label>
</RecordType>