src/objects/Costing__c/recordTypes/Marlow_Costing.recordType-meta.xml
<RecordType>
    <fullName>Marlow_Costing</fullName>
    <active>true</active>
    <label>Marlow Costing</label>
</RecordType>