src/objects/Costing__c/validationRules/Marlow_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Marlow_Required_Fields</fullName>
    <active>true</active>
    <description>Marlow users are required to populate costing completion date and special requirements</description>
    <errorConditionFormula>AND( 
ISBLANK(Cost_Completion_Date__c),
ISBLANK(Special_Requirements__c),
TEXT($User.Legacy_Company__c) = &quot;Marlow&quot;
)</errorConditionFormula>
    <errorMessage>Please populate Cost Completion Date and Special Requirement fields</errorMessage>
</ValidationRule>