src/objects/Costing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Costing_Number__c</columns>
    <columns>Market_AGC__c</columns>
    <columns>OpportunityNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>